# Federated-LoRA-Transformers

./: FL_Lora.ipynb  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: federated_small.yaml  sst2_fedavg_lora.yaml  sst2_fedprox_lora.yaml  sst2_fedual_lora.yaml  tiny_cpu_yaml
configs/tests/: test_aggregation.py  test_config.py
scripts/: run_experiment.py  run_federated.py  run_tiny.py  summarize_results.py
src/fl_lora/: comms.py  config.py  data.py  lora.py  metrics.py  seed.py
src/fl_lora/federated/: aggregation.py  client.py  losses.py  server.py
tests/: test_aggregation.py  test_comms.py  test_config.py  test_fedavg.py  test_partition.py
