[project]
name = "fl-lora"
version = "0.1.0"
description = "Federated LoRA training utilities and experiment scripts"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pyyaml",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
